Bug 866112 - GC: Fix some misc rooting hazards in the shell r=terrence